[workspace]
members = ["ferris_elf"]

[package]
name = "aoc2023"
version = "0.0.1"
edition = "2021"
authors = ["drewtato"]
description = "Advent of Code solutions in Rust for 2023"
keywords = ["aoc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.6", default-features = false, features = [
	"std",
	"compile-time-rng",
] }
atoi = "2.0.0"
clap = { version = "4.4.10", features = ["derive"] }
html-escape = "0.2.13"
itertools = "0.12.0"
regex = { version = "1.10.2", default-features = false, features = [
	"std",
	"perf",
	"unicode-perl",
] }
chrono = "0.4.31"
thiserror = "1.0.50"
clap_complete = "4.4.4"
ureq = "2.9.1"
rayon.workspace = true
num-integer = "0.1.45"
rustc-hash.workspace = true
bytemuck.workspace = true
arrayvec.workspace = true
num-rational = "0.4.1"
z3 = { version = "0.12.1", features = ["static-link-z3"] }

[workspace.dependencies]
arrayvec = "0.7.4"
bytemuck = "1.14.0"
rayon = "1.8"
rustc-hash = "1.1.0"
